[tool.poetry]
name = "tortoise-vector"
version = "0.1.3"
description = "pgvector implementation for Tortoise-ORM"
authors = ["Sebastien Nicolet <snicolet95@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tortoise_vector"}]

[tool.poetry.dependencies]
python = "^3.11"
tortoise-orm = {version = ">=0.23", extras = ["asyncpg"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
